(partialy) fix the annoying unreadable text

--- a/CSS/messages.css
+++ b/CSS/messages.css
@@ -697,3 +697,6 @@ a.menu-type.menu-linkbutton.smsc-linkbutton {
 .topnav__btn.topnav__btn--profile {
   color: var(--color-text) !important;
 }
+.MsoNormal{
+    background-color: var(--color-base01) !important;
+}
